// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video component renders a video with custom ratio (4:3) 1`] = `
@media  {
  .c-PJLV-idxALcY-css {
    position: relative;
    padding-top: 56.25%;
    overflow: hidden;
    height: 0;
    width: 100%;
  }

  .c-PJLV-ijsPNpl-css {
    position: absolute;
    top: 0;
    left: 0;
  }

  .c-PJLV-ifNmBdw-css {
    position: relative;
    padding-top: 75%;
    overflow: hidden;
    height: 0;
    width: 100%;
  }
}

<div>
  <div
    class="c-PJLV c-PJLV-ifNmBdw-css"
  >
    <div
      class="c-PJLV c-PJLV-ijsPNpl-css"
      role="figure"
      style="width: 100%; height: 100%;"
    >
      <div
        style="width: 100%; height: 100%; overflow: hidden;"
      />
    </div>
  </div>
</div>
`;

exports[`Video component renders a video with default ratio 1`] = `
@media  {
  .c-PJLV-idxALcY-css {
    position: relative;
    padding-top: 56.25%;
    overflow: hidden;
    height: 0;
    width: 100%;
  }

  .c-PJLV-ijsPNpl-css {
    position: absolute;
    top: 0;
    left: 0;
  }
}

<div>
  <div
    class="c-PJLV c-PJLV-idxALcY-css"
  >
    <div
      class="c-PJLV c-PJLV-ijsPNpl-css"
      role="figure"
      style="width: 100%; height: 100%;"
    >
      <div
        style="width: 100%; height: 100%; overflow: hidden;"
      />
    </div>
  </div>
</div>
`;
